# ODplatform

./: .gitignore  .odp-workspace  README.md  pyproject.toml
apps/desktop/: README.md
apps/platform/: README.md  pyproject.toml
apps/platform/src/odp_platform/: __init__.py  _version.py
apps/platform/src/odp_platform/cli/: __init__.py  init_project.py  reset_project.py  transform_data.py
apps/platform/src/odp_platform/common/: __init__.py  constants.py  logging_utils.py  paths.py  performance_utils.py  string_utils.py  system_utils.py
apps/platform/src/odp_platform/data_pipeline/: __init__.py  orchestrator.py  registry.py  service.py
apps/platform/src/odp_platform/data_pipeline/core/: coco.py  pascal_voc.py  yolo.py
apps/platform/src/odp_platform/data_pipeline/split/: __init__.py  manifest.py  materializer.py  splitter.py  yaml_writer.py
apps/platform/tests/: test_e2e_smoke.py
apps/platform/tests/data_pipeline/: test_registry.py
apps/platform/tests/data_pipeline/split/: test_splitter.py
apps/web-backend/: README.md
apps/web-frontend/: README.md
data/: README.md
docs/architecture/: ADR-001-monorepo.md  ADR-002-data-pipeline.md  README.md
models/checkpoints/: README.md
models/pretrained/: README.md
runs/: README.md
scripts/: init_project.py  reset_project.py
tests/e2e/: README.md
