# pyproject.toml(顶层)
# =============================================================================
# ODPlatform Workspace 顶层配置 —— 工具配置容器 + 元包(空包,仅 dev 依赖)
# =============================================================================

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "odplatform-workspace"
version = "0.1.0"
description = "ODPlatform - 通用目标检测开发平台 (Monorepo workspace root)"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]


# =============================================================================
# Ruff 配置
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
src = [
    "apps/platform/src",
    "packages/shared-schemas/src",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["odp_platform", "shared_schemas"]


# =============================================================================
# Mypy 配置
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["colorlog.*", "psutil.*", "ultralytics.*", "torch.*"]
ignore_missing_imports = true


# =============================================================================
# Pytest 配置
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "apps/platform/tests",
    "tests",
]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers", "--tb=short"]

markers = [
    "unit: 单元测试 (快,无 IO)",
    "integration: 集成测试 (有 IO)",
    "slow: 慢测试 (> 1s)",
]